# nwokoro

./: .gitignore  Pipfile  Procfile  README.md  main.py  manage.py  profile.json  pyproject.toml  requirements.txt
account/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_initial.py  0002_transaction.py  0003_user_preferences.py  0004_preference.py  0005_remove_preference_networth_countries_and_more.py  0006_preference_savings_holders.py  0007_remove_preference_networth_and_more.py  0008_preference_forecast_email_fields.py
account/templates/account/: 403.html  edit_profile_form.html  error.html  login.html  logout.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  profile.html  sign_up_form.html  statement.html
achieve/: forms.py  models.py  urls.py  views.py
achieve/migrations/: 0001_initial.py
achieve/templates/achieve/: create.html  home.html
chore/: admin.py  emails.py  forms.py  models.py  tasks.py  urls.py  views.py
chore/migrations/: 0001_initial.py  0002_remove_bonuspoint_unique_active_record.py  0003_alter_initiatework_name.py
chore/templates/chore/: assign_work_list.html  bonus_form.html  completed_job_decision.html  concluded_work.html  concluded_work_detail.html  dashboard.html  decision_form.html  delegate_initiate_form.html  extend_time_form.html  helper.html  home.html  initiate_work_approve_form.html  initiate_work_detail.html  initiate_work_form.html  registration_message.html  setup.html  work_done_form.html  work_evaluate_form.html  work_form.html  work_list.html  work_register_form.html  work_register_list.html
chore/templates/chore/mails/: admin.html  dashboard.html  delegate.html  initiate.html  initiate_approve.html  welcome.html
core/: forms.py  models.py  urls.py  views.py
core/management/commands/: test_email.py
core/migrations/: 0001_initial.py  0002_config.py  0002_remove_config_networth_options.py  0003_config_networth_options.py
core/templates/core/: aboutme.html  activate_registration.html  base.html  error.html  home.html  homepage 2.html  homepage.html  include_table_filter.html  me_home.html  new_about_me.html  preference.html  resume.html  studentprofile_list.html  texting.html  tutorial.html
core/templates/core/portfolio/: finuel.html  root.html  scush.html  scushproject.html
core/templates/core/portfolio/tinyprojects/: auto_email.html  databaselearning.html  numtoword.html  (+3 more)
core/templatetags/: custom_tag.py
core/tinyproject/: numtoword.py  taxes.py
networth/: admin.py  apps.py  emails.py  forms.py  models.py  plots.py  signals.py  tasks.py  tools.py  urls.py  views.py
networth/migrations/: 0001_initial.py  0002_alter_saving_holder.py  0002_investment_category_saving_category.py  0003_alter_business_name.py  0003_exchangerate.py  0004_alter_investment_principal_alter_saving_value.py  0004_business_description_fixedasset_description_and_more.py  0005_injectfund_rewardfund.py  0005_investment_is_active.py  0006_financialtransaction.py  0006_remove_borrowedfund_host_country_and_more.py  0007_alter_saving_owner_investmenttransaction_and_more.py  0007_borrowedfund_terminal_date_and_more.py  0008_borrowedfund_host_country.py  0008_stock_stocktransaction.py  0009_borrowedfund_is_active.py  0009_financialdata.py  0010_business_businesstransaction_fixedasset_and_more.py  0010_business_is_active.py  0011_borrowedfund_borrowedfundtransaction.py  0011_rent_fixedasset_rent.py  0012_financialdata_networth_by_country.py  0012_fixedasset_is_active.py  0013_financialdata_exchange_rate.py  0013_fixedasset_growth_rate.py  0014_financialdata_owner.py
networth/templates/networth/: balance_sheet.html  borrow_form.html  business_detail.html  business_form.html  business_list.html  conversion_form.html  dashboard.html  external_fund.html  fixed_asset_detail.html  fixed_asset_form.html  fixed_asset_list.html  forecast.html  forecast_pdf.html  home.html  inject_form.html  institution.html  investment_detail.html  investment_form.html  investment_list.html  liability_detail.html  liability_list.html  liquidate_form.html  networth_history.html  plow_back_form.html  preference.html  rent_form.html  repay_form.html  reward_form.html  rollover_form.html  saving_detail.html  saving_form.html  saving_list.html  stock_detail.html  stock_form.html  stock_list.html  terminate_form.html  transaction_list.html
networth/templates/networth/mails/: financial_report.html  investment_notification.html
networth/templates/networth/pdf/: base_pdf.html  networth.html
networth/views/: __init__.py  business.py  dashboard.py  external_funds.py  fixed_assets.py  forecast.py  investments.py  liabilities.py  preferences.py  reports.py  savings.py  stocks.py
nwokoro/: asgi.py  celery.py  jinja2.py  settings.py  urls.py  wsgi.py
static/: staticfiles.json
