[project]
name = "nwokoro"
version = "1.6.8"
description = "Personal interest project"
authors = [
    { name = "Uzo Tammy Nwokoro", email = "uzo.tammy@gmail.com" },
]
dependencies = [
    "alabaster==1.0.0; python_version >= '3.10'",
    "amqp==5.3.1; python_version >= '3.6'",
    "asgiref==3.8.1; python_version >= '3.8'",
    "babel==2.16.0; python_version >= '3.8'",
    "beautifulsoup4==4.12.3; python_full_version >= '3.6.0'",
    "billiard==4.2.1; python_version >= '3.7'",
    "brotli==1.1.0",
    "celery==5.4.0; python_version >= '3.8'",
    "certifi==2024.12.14; python_version >= '3.6'",
    "cffi==1.17.1; python_version >= '3.8'",
    "charset-normalizer==3.4.0; python_full_version >= '3.7.0'",
    "click==8.1.8; python_version >= '3.7'",
    "click-didyoumean==0.3.1; python_full_version >= '3.6.2'",
    "click-plugins==1.1.1",
    "click-repl==0.3.0; python_version >= '3.6'",
    "contourpy==1.3.2; python_version >= '3.10'",
    "crispy-bootstrap4==2024.10; python_version >= '3.8'",
    "cron-descriptor==1.4.5",
    "cssselect2==0.8.0; python_version >= '3.9'",
    "cycler==0.12.1; python_version >= '3.8'",
    "distlib==0.3.8",
    "dj-database-url==2.3.0",
    "django==5.1.4; python_version >= '3.10'",
    "django-appconf==1.1.0; python_version >= '3.9'",
    "django-celery-beat==2.7.0; python_version >= '3.8'",
    "django-crispy-forms==2.3; python_version >= '3.8'",
    "django-jinja==2.11.0; python_version >= '3.8'",
    "django-money==3.5.4; python_version >= '3.7'",
    "django-on-heroku==1.1.2",
    "django-select2==8.4.1; python_version >= '3.10'",
    "django-storages==1.14.4; python_version >= '3.7'",
    "django-timezone-field==7.0; python_version >= '3.8' and python_version < '4.0'",
    "django-weasyprint==2.4.0; python_version >= '3.8'",
    "docutils==0.21.2; python_version >= '3.9'",
    "filelock==3.13.1; python_version >= '3.8'",
    "fonttools[woff]==4.58.4; python_version >= '3.9'",
    "furo==2024.8.6; python_version >= '3.8'",
    "gunicorn==23.0.0; python_version >= '3.7'",
    "idna==3.10; python_version >= '3.6'",
    "imagesize==1.4.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "jinja2==3.1.5; python_version >= '3.7'",
    "kiwisolver==1.4.8; python_version >= '3.10'",
    "kombu==5.4.2; python_version >= '3.8'",
    "markupsafe==3.0.2; python_version >= '3.9'",
    "matplotlib==3.10.3; python_version >= '3.10'",
    "mpld3==0.5.10",
    "numpy==2.3.1; python_version >= '3.11'",
    "packaging==24.2; python_version >= '3.8'",
    "pillow==11.2.1; python_version >= '3.9'",
    "pipenv==2023.11.15; python_version >= '3.8'",
    "platformdirs==4.1.0; python_version >= '3.8'",
    "prompt-toolkit==3.0.48; python_full_version >= '3.7.0'",
    "psycopg2-binary==2.9.10; python_version >= '3.8'",
    "py-moneyed==3.0; python_version >= '3.7'",
    "pycparser==2.22; python_version >= '3.8'",
    "pydyf==0.11.0; python_version >= '3.8'",
    "pygments==2.18.0; python_version >= '3.8'",
    "pyparsing==3.2.3; python_version >= '3.9'",
    "pyphen==0.17.2; python_version >= '3.9'",
    "python-crontab==3.2.0",
    "python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "python-dotenv==1.0.1; python_version >= '3.8'",
    "requests==2.32.3; python_version >= '3.8'",
    "scipy==1.15.3; python_version >= '3.10'",
    "setuptools==80.9.0; python_version >= '3.9'",
    "six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "snowballstemmer==2.2.0",
    "soupsieve==2.6; python_version >= '3.8'",
    "sphinx==8.1.3; python_version >= '3.10'",
    "sphinx-basic-ng==1.0.0b2; python_version >= '3.7'",
    "sphinxcontrib-applehelp==2.0.0; python_version >= '3.9'",
    "sphinxcontrib-devhelp==2.0.0; python_version >= '3.9'",
    "sphinxcontrib-htmlhelp==2.1.0; python_version >= '3.9'",
    "sphinxcontrib-jsmath==1.0.1; python_version >= '3.5'",
    "sphinxcontrib-qthelp==2.0.0; python_version >= '3.9'",
    "sphinxcontrib-serializinghtml==2.0.0; python_version >= '3.9'",
    "sqlparse==0.5.3; python_version >= '3.8'",
    "tinycss2==1.4.0; python_version >= '3.8'",
    "tinyhtml5==2.0.0; python_version >= '3.9'",
    "typing-extensions==4.12.2; python_version >= '3.8'",
    "tzdata==2024.2; python_version >= '2'",
    "urllib3==2.3.0; python_version >= '3.9'",
    "vine==5.1.0; python_version >= '3.6'",
    "virtualenv==20.25.0; python_version >= '3.7'",
    "wcwidth==0.2.13",
    "weasyprint==65.1; python_version >= '3.9'",
    "webencodings==0.5.1",
    "whitenoise==6.8.2; python_version >= '3.9'",
    "zopfli==0.2.3.post1",
]

[build-system]
requires = ["uv>=0.1.0", "setuptools>=64.0"]
build-backend = "setuptools.build_meta"
    